src/test/deca/context/valid/oracle/class_extends_object.deca
class A extends Object{
    int x;
}