src/test/deca/context/invalid/oracle/use_var_not_decl_with_mult.deca
{
    int x;
    x = y * 2;
}